# lmfitxps

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  bumpver.toml  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
docs/: .readthedocs.yaml  _config.yml  about.rst  additional_functions.rst  backgrounds.rst  citations.rst  conf.py  contribution.rst  index.md  index.rst  introduction.rst  lineshapes.rst  note.rst  peaks.rst  pyvenv.cfg  requirements.txt  static_backgrounds.rst  usage.rst
docs/lmfit-additional-models/: models.rst
docs/lmfitxps/: models.rst
docs/models/: pyvenv.cfg
docs/pages/: setup.md
examples/: Example_ConvGaussianDoniachDublett.py  Example_ConvGaussianDoniachSinglett.py  Example_FermiEdgeModel.py  FermiEdge.csv  clean_Au_4f.csv  clean_Au_4f.txt  context.py  logo.py  tougaard_extend.py  tougaard_extend2.py
lmfit-additional-models/: functions.py  models.py  setup.py
lmfitxps/: README.md  backgrounds.py  bumpver.toml  lineshapes.py  models.py  pyproject.toml  test.py
lmfitxps/src/lmfitxps/: functions.py  models.py
src/lmfitxps/: backgrounds.py  lineshapes.py  models.py
tests/: context.py  test_backgrounds.py  test_models.py
