# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel", 'scipy', 'numpy', 'lmfit']
build-backend = "setuptools.build_meta"

[project]
name='lmfitxps'
readme='README.md'
version = "2.1.6"
authors=[{name='Julian Hochhaus', email='julian.hochhaus@tu-dortmund.de'}]
license={file='LICENSE', name='MIT'}
description='This package contains additional models for the lmfit package for fitting XPS spectra.'

[project.urls]
homepage='https://github.com/Julian-Hochhaus/lmfitxps'
documentation='https://lmfitxps.readthedocs.io/en/latest/'


